<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TableRow 
        android:layout_marginTop="30px">
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_id"/>
        
        <EditText 
            android:id="@+id/sto_add_id"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sto_add_id_hint"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_name"/>
        
        <EditText 
            android:id="@+id/sto_add_name"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sto_add_name_hint"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_type"/>
        
        <EditText 
            android:id="@+id/sto_add_type"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sto_add_type_hint"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_money"/>
        
        <EditText 
            android:id="@+id/sto_add_money"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sto_add_money_hint"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_addr"/>
        
        <EditText 
            android:id="@+id/sto_add_addr"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/sto_add_addr_hint"
            android:lines="1"/>
    </TableRow>
    
    <Button 
        android:id="@+id/sto_add_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sto_add_submit"/>

</TableLayout>
