<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp"
        android:layout_gravity="center"
        android:text="添加商品"/>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TableRow
            android:layout_marginTop="30px">
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/g_id"/>

            <EditText
                android:id="@+id/g_add_id"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_id_hint"
                android:lines="1"/>
        </TableRow>

        <TableRow >
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/g_name"/>

            <EditText
                android:id="@+id/g_add_name"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_name_hint"
                android:lines="1"/>
        </TableRow>

        <TableRow >
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/g_unit"/>

            <EditText
                android:id="@+id/g_add_unit"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_unit_hint"
                android:lines="1"/>
        </TableRow>

        <TableRow >
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sto_id"/>

            <EditText
                android:id="@+id/g_add_stoid"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_stoid_hint"
                android:lines="1"/>
        </TableRow>

        <TableRow >
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/g_num"/>

            <EditText
                android:id="@+id/g_add_num"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_num_hint"
                android:lines="1"/>
        </TableRow>

        <TableRow >
            <TextView
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/g_price"/>

            <EditText
                android:id="@+id/g_add_price"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/add_price_hint"
                android:lines="1"/>
        </TableRow>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_submit"/>

    </TableLayout></LinearLayout>