<?xml version="1.0" encoding="utf-8"?>
<TableLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	<TableRow>
	    <TextView 
	        android:gravity="center"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/g_id"/>
	 
		<TextView 
			android:id="@+id/_id"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
		
		<TextView 
		    android:gravity="center"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/g_name"/>
		
		<TextView 
			android:id="@+id/_name"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	</TableRow>
	
	<TableRow>
	    <TextView 
	        android:gravity="center"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/g_unit"/>
	    
		<TextView 
			android:id="@+id/_unit"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
		
		<TextView 
		    android:gravity="center"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/sto_id"/>
		<TextView 
			android:id="@+id/_stoid"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	</TableRow>
	
	<TableRow>
	    <TextView 
	        android:gravity="center"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/g_num"/>
	    
		<TextView 
			android:id="@+id/_num"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
		
		<TextView 
		    android:gravity="center"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:text="@string/g_price"/>
		
		<TextView 
			android:id="@+id/_price"
			android:gravity="center"
			android:layout_weight="1"
			android:layout_height="wrap_content" />
	</TableRow>
</TableLayout>
