<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textSize="26sp"
        android:gravity="center"
        android:background="#00ccff"/>
    <TextView
        android:id="@+id/p_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <TableRow 
        android:layout_marginTop="30px">
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/g_id"/>
        
        <EditText 
            android:id="@+id/g_update_id"
            android:layout_weight="3"          
            android:layout_height="wrap_content"
            android:gravity="center"
            android:editable="false"
            android:background="#ffffff"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/g_name"/>
        
        <EditText 
            android:id="@+id/g_update_name"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"  
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/g_unit"/>
        
        <EditText 
            android:id="@+id/g_update_unit"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_id"/>
        
        <EditText 
            android:id="@+id/g_update_stoid"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/g_num"/>
        
        <EditText 
            android:id="@+id/g_update_num"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/g_price"/>
        
        <EditText 
            android:id="@+id/g_update_price"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
    <Button 
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_submit"/>
    

</TableLayout>
