<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sto_update"
        android:textSize="30px"
        android:gravity="center"
        android:background="#00ccff"/>
    <TableRow 
        android:layout_marginTop="30px">
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_id"/>
        
        <EditText 
            android:id="@+id/sto_update_id"
            android:layout_weight="3"          
            android:layout_height="wrap_content"
            android:gravity="center"
            android:editable="false"
            android:background="#ffffff"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_name"/>
        
        <EditText 
            android:id="@+id/sto_update_name"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"  
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_type"/>
        
        <EditText 
            android:id="@+id/sto_update_type"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_money"/>
        
        <EditText 
            android:id="@+id/sto_update_money"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
     <TableRow >
        <TextView 
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sto_addr"/>
        
        <EditText 
            android:id="@+id/sto_update_addr"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"/>
    </TableRow>
    
  
    
    <Button 
        android:id="@+id/sto_update_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sto_add_submit"/>
    

</TableLayout>
