<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/sto_msg" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sto_message"
        android:textSize="30dp"
        android:gravity="center"
        android:background="#00ccff"/>
   <EditText 
       android:id="@+id/sto_key"
       android:layout_width="350dp"
       android:layout_height="wrap_content"
       android:hint="@string/sto_key"
       android:layout_below="@id/sto_msg"
	   android:layout_alignParentStart="true"
	   android:layout_toStartOf="@+id/sto_find" />
   
    <ListView
        android:layout_below="@id/sto_key"
		android:id="@+id/sto_datalist"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>
    
    
	<Button 
	    android:id="@+id/sto_add"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:text="@string/add_storage"/>

	<Button
	    android:id="@+id/sto_find"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
	    android:text="@string/sto_find"
		android:layout_above="@+id/sto_datalist" />

</RelativeLayout>
  